Tue Jul 10 19:16:28 2007  Koichi Sasada  <ko1@atdot.net>

	* eval.c, insnhelper.ci, vm.c: change cref index (-1 -> 2).

Tue Jul 10 18:49:56 2007  Koichi Sasada  <ko1@atdot.net>

	* eval.c (exec_under): add proper casts.

Tue Jul 10 16:58:16 2007  Koichi Sasada  <ko1@atdot.net>

	* vm.c, insnhelper.ci: fix svar interface.

	* compile.c (iseq_compile_each), yarvcore.h: fix to use new
	  svar interface for flip flop.

	* eval.c: ditto.

	* insns.def: ditto.

	* include/ruby/intern.h: remove "rb_svar()" declaration.

Tue Jul 10 16:52:01 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (rb_iseq_compile): formatted if/else to switch statement.

Tue Jul 10 15:57:53 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bootstraptest/test_flip.rb: new test for flip-flop operator.

Tue Jul 10 14:50:01 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bcc32/{Makefile.sub,setup.mak}: remove surplus slash from srcdir.

Mon Jul  9 02:17:36 2007  NAKAMURA Usaku  <usa@ruby-lang.org>

	* cont.c (cont_restore_1): workaround for x64-mswin64's SEH.

Sun Jul  8 02:08:53 2007  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/json.rb, lib/json/, ext/json/: import JSON 1.1.1

Sat Jul  7 21:59:29 2007  Tanaka Akira  <akr@fsij.org>

	* lib/pp.rb (PP::PPMethods#pp_hash): sort condition changed:
	  all keys have a same class which is kind of Comparable.

Sat Jul  7 17:12:37 2007  Koichi Sasada  <ko1@atdot.net>

	* compile.c: use rb_bug() instead of rb_compile_error().

Sat Jul  7 16:12:48 2007  Koichi Sasada  <ko1@atdot.net>

	* parse.y: fix node construction (around f_margs).
	  [ruby-dev:31143]

	* bootstraptest/test_block.rb: add a test for above.

	* insnhelper.ci: fix indent.

Sat Jul  7 15:36:50 2007  Tanaka Akira  <akr@fsij.org>

	* lib/pp.rb (PP::PPMethods#pp_hash): sort if
	  all keys are strings, symbols or integers.

Sat Jul  7 15:30:05 2007  Koichi Sasada  <ko1@atdot.net>

	* insnhelper.ci (vm_yield_setup_args), vm.c, insns.def: 