@@ -1,3 +1,13 @@
+Tue Jul 10 19:34:45 2007  Koichi Sasada  <ko1@atdot.net>
+
+	* hash.c (rb_hash_lookup): added.  this function is similar to
+	  rb_hash_aref(), but doesn't call Hash#default when no entry
+	  exists.
+
+	* include/ruby/intern.h: ditto.
+
+	* insnhelper.ci (lfp_svar_get): use rb_hash_lookup().
+
 Tue Jul 10 19:16:28 2007  Koichi Sasada  <ko1@atdot.net>
 
 	* eval.c, insnhelper.ci, vm.c: change cref index (-1 -> 2).
